# suspend

./: .gitignore  AUTHORS  COPYING  HOWTO  Makefile  Makefile.am  README  README.encryption  README.s2ram-whitelist  TODO  autogen.sh  bootsplash.c  bootsplash.h  config.c  config.h  config_parser.c  config_parser.h  configure.ac  dmidecode.c  encrypt.c  encrypt.h  fbsplash-test.c  fbsplash_funcs.c  fbsplash_funcs.h  keygen.c  load.c  loglevel.c  loglevel.h  memalloc.c  memalloc.h  radeontool.c  resume.c  s2ram-main.c  s2ram-ppc.c  s2ram-ppc.h  s2ram-x86.c  s2ram-x86.h  s2ram.c  s2ram.h  splash.c  (+14 more)
conf/: suspend.conf
doc/: Makefile.am  installation-on-SUSE-10.1.txt
manpages/: Makefile.am  s2disk.8  s2ram.8  suspend-keygen.8  suspend.conf.5  swap-offset.8
scripts/: Makefile.am  create-resume-initrd.sh  install-resume.sh
scripts/suse-10.1/: Makefile.am  do_acpi_sleep.patch  mkinitrd.patch  modify-system-files.sh
vbetool/: COPYING  LRMI  Makefile.am  configure.in  lrmi.c  thunk.c  vbetool.1  vbetool.c  vbetool.h  x86-common.c  x86-common.h
vbetool/include/: lrmi.h  x86emu.h
vbetool/x86emu/: debug.c  decode.c  makefile.linux  sys.c
vbetool/x86emu/x86emu/: types.h  x86emu.h  x86emui.h
